Added fullstop to end of captions

--- a/control/plots/compare_control_acc_sp.tex
+++ b/control/plots/compare_control_acc_sp.tex
@@ -41,6 +41,6 @@
         \end{axis}
     \end{tikzpicture} 
     \caption{Acceleration setpoint commanded by different controllers for a velocity step input
-    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
+    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}).}
     \label{fig:compare_control_acc_sp}
 \end{figure}
