--- a/control/plots/compare_control_vel_l-1.0_mp-0.2.tex
+++ b/control/plots/compare_control_vel_l-1.0_mp-0.2.tex
@@ -49,7 +49,7 @@
         \end{axis}
     \end{tikzpicture} 
     \caption{Velocity step response comparison of different controllers
-    ($l =$~\SI{1}{\meter}, $m_p =$~\SI{0.2}{\kilo\gram})}
+    ($l =$~\SI{1}{\meter}, $m_p =$~\SI{0.2}{\kilo\gram}).}
     \label{fig:compare_control_vel_l1}
     
 \end{figure}
