--- a/control/plots/compare_control_vel_wind_disturbance.tex
+++ b/control/plots/compare_control_vel_wind_disturbance.tex
@@ -46,6 +46,6 @@
         \end{axis}
     \end{tikzpicture} 
     \caption{Effect of an unmeasured step input disturbance.
-    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
+    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}).}
     \label{fig:compare_control_vel_wind_disturbance}
 \end{figure}
