--- a/control/plots/mpc_tuning_plot.tex
+++ b/control/plots/mpc_tuning_plot.tex
@@ -47,6 +47,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{\gls{MPC} velocity step responses with different payloads}
+    \caption{\gls{MPC} velocity step responses with different payloads.}
     \label{fig:mpc_tuning_plot}
 \end{figure}
