--- a/control/plots/mpc_vel_prediction_vs_actual.tex
+++ b/control/plots/mpc_vel_prediction_vs_actual.tex
@@ -42,6 +42,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Optimised prediction and actual velocity response of the MCP with a dynamic payload}
+    \caption{Optimised prediction and actual velocity response of the MCP with a dynamic payload.}
     \label{fig:mpc_vel_prediction_vs_actual}
 \end{figure}
