--- a/control/plots/pid_tuning_plot_theta.tex
+++ b/control/plots/pid_tuning_plot_theta.tex
@@ -33,6 +33,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{Payload angle}
+    \caption{Payload angle.}
     \label{fig:pid_tuning_plot_theta}
 \end{subfigure}
