--- a/control/plots/pid_tuning_plot_vel.tex
+++ b/control/plots/pid_tuning_plot_vel.tex
@@ -47,6 +47,6 @@
 
         \end{axis}
     \end{tikzpicture} 
-    \caption{North velocity}
+    \caption{North velocity.}
     \label{fig:pid_tuning_plot_vel}
 \end{subfigure}
