--- a/control/plots/rootlocus_cl.tex
+++ b/control/plots/rootlocus_cl.tex
@@ -670,6 +670,6 @@
 
         \end{axis}
     \end{tikzpicture}
-    \caption{Root locus plot of the North velocity dynamics including \gls{PID} controller}
+    \caption{Root locus plot of the North velocity dynamics including \gls{PID} controller.}
     \label{fig:rootlocus_cl}
 \end{figure}
