--- a/control/plots/rootlocus_closed_loop.tex
+++ b/control/plots/rootlocus_closed_loop.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Closed loop transfer function including the North velocity controller and $G_{V_N}$}
+    \caption{Closed loop transfer function including the North velocity controller and $G_{V_N}$.}
     \label{fig:rootlocus_closed_loop}
 \end{subfigure}
