--- a/control/plots/rootlocus_open_loop.tex
+++ b/control/plots/rootlocus_open_loop.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Open loop transfer function, $G_{V_N}$}
+    \caption{Open loop transfer function, $G_{V_N}$.}
     \label{fig:rootlocus_open_loop}
 \end{subfigure}
