--- a/results/plots/CPU_vs_Ts.tex
+++ b/results/plots/CPU_vs_Ts.tex
@@ -35,6 +35,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Maximum \% CPU used by the MPC node for different sample times ($q = 50$)}
+    \caption{Maximum \% CPU used by the MPC node for different sample times ($q = 50$).}
     \label{fig:CPU_vs_Ts}
 \end{figure}
