--- a/results/plots/CPU_vs_q.tex
+++ b/results/plots/CPU_vs_q.tex
@@ -36,6 +36,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Maximum \%CPU used by the MPC node for different values of $q$ ($Ts =$~\SI{0.03}{\second})}
+    \caption{Maximum \%CPU used by the MPC node for different values of $q$ ($Ts =$~\SI{0.03}{\second}).}
     \label{fig:CPU_vs_q}
 \end{figure}
