--- a/results/plots/FFT_double_pend_prac.tex
+++ b/results/plots/FFT_double_pend_prac.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{FFT amplitude spectrum}
+    \caption{FFT amplitude spectrum.}
     \label{fig:FFT_double_pend_prac}
 \end{subfigure}
