--- a/results/plots/FFT_pos_step_prac.tex
+++ b/results/plots/FFT_pos_step_prac.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{The single-sided amplitude spectrum of the FFT}
+    \caption{The single-sided amplitude spectrum of the FFT.}
     \label{fig:FFT_pos_step_prac}
 \end{subfigure}
