--- a/results/plots/HITL_mpc_theta.tex
+++ b/results/plots/HITL_mpc_theta.tex
@@ -41,6 +41,6 @@
     \end{tikzpicture} 
     
     \caption{Payload angle responses of MPC and PID controllers for \gls{HITL} simulations
-        ($q = 50$, $T_s =$~\SI{0.03}{\second})}
+        ($q = 50$, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:HITL_mpc_theta}
 \end{figure}
