--- a/results/plots/RAM_vs_q.tex
+++ b/results/plots/RAM_vs_q.tex
@@ -38,6 +38,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Maximum \% RAM used by the MPC node for different values of $q$}
+    \caption{Maximum \% RAM used by the MPC node for different values of $q$.}
     \label{fig:RAM_vs_q}
 \end{figure}
