--- a/results/plots/cable_length_vs_train_time.tex
+++ b/results/plots/cable_length_vs_train_time.tex
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{Plot of the error in cable length estimation as a function of length of training data 
-    (wind speed $\approx~$\SI{0.5}{\metre/\second})}
+    (wind speed $\approx~$\SI{0.5}{\metre/\second}).}
     \label{fig:cable_length_vs_train_time}
 \end{figure}
