--- a/results/plots/prac_pediction_single_pend_vel_black.tex
+++ b/results/plots/prac_pediction_single_pend_vel_black.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{Model predictions of practical flight data with a suspended payload for a North velocity step input
-        ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}, wind speed $\approx~$\SI{0.5}{\metre/\second})}
+        ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}, wind speed $\approx~$\SI{0.5}{\metre/\second}).}
     \label{fig:prac_pediction_single_pend_vel_black}
 \end{figure}
