--- a/results/plots/prediction_double_pend_white_prac.tex
+++ b/results/plots/prediction_double_pend_white_prac.tex
@@ -38,6 +38,6 @@
         \end{axis}
     \end{tikzpicture} 
 
-    % \caption{Good white-box model approximation}
+    % \caption{Good white-box model approximation.}
     \label{fig:prediction_double_pend_white_prac}
 \end{subfigure}
