--- a/results/plots/prediction_double_pend_white_prac_bad.tex
+++ b/results/plots/prediction_double_pend_white_prac_bad.tex
@@ -38,6 +38,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    % \caption{Bad white-box model approximation}
+    % \caption{Bad white-box model approximation.}
     \label{fig:prediction_double_pend_white_prac_bad}
 \end{subfigure}
