--- a/results/plots/prediction_single_pend_white_prac.tex
+++ b/results/plots/prediction_single_pend_white_prac.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{White-box model prediction for a North velocity step input
-    ($l =$~\SI{2}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.)}
+    ($l =$~\SI{2}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.).}
     \label{fig:prediction_single_pend_white_prac}
 \end{figure}
