--- a/system_id/plots/FFT_single_pend.tex
+++ b/system_id/plots/FFT_single_pend.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Single pendulum}
+    \caption{Single pendulum.}
     \label{fig:FFT_single_pend}
 \end{subfigure}
