--- a/system_id/plots/MAE_vs_Ntrain_double_pend.tex
+++ b/system_id/plots/MAE_vs_Ntrain_double_pend.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{\gls{HAVOKc} prediction error using different cable lengths with a range of different lengths of noisy training data
-    ($l =$~\SI{1}{\metre}, $T_{train} =$~various??.)}
+    ($l =$~\SI{1}{\metre}, $T_{train} =$~various??.).}
     \label{fig:single_vs_double_pend}
 \end{figure}
