--- a/system_id/plots/different_lengths.tex
+++ b/system_id/plots/different_lengths.tex
@@ -43,6 +43,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{$m_p = $~\SI{0.2}{\kilo\gram}, with varying $l$}
+    \caption{$m_p = $~\SI{0.2}{\kilo\gram}, with varying $l$.}
     \label{fig:different_lengths}
 \end{subfigure}
