--- a/system_id/plots/different_masses.tex
+++ b/system_id/plots/different_masses.tex
@@ -43,6 +43,6 @@
         \end{axis}
     \end{tikzpicture} 
 
-    \caption{$l = $~\SI{1}{\metre}, with varying $m_p$}
+    \caption{$l = $~\SI{1}{\metre}, with varying $m_p$.}
     \label{fig:different_masses}
 \end{subfigure}
