--- a/system_id/plots/vel_step_single_pend.tex
+++ b/system_id/plots/vel_step_single_pend.tex
@@ -37,6 +37,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Position step response of the payload swing angle}
+    \caption{Position step response of the payload swing angle.}
     \label{fig:vel_step_single_pend}
 \end{subfigure}
