--- a/control/plots/compare_control_theta.tex
+++ b/control/plots/compare_control_theta.tex
@@ -45,6 +45,6 @@
         \end{axis}
     \end{tikzpicture} 
     \caption{Payload angle comparison of different controllers
-    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram})}
+    ($l =$~\SI{2}{\meter}, $m_p =$~\SI{0.3}{\kilo\gram}).}
     \label{fig:compare_control_theta}
 \end{figure}
