--- a/control/plots/compare_control_vel_l-0.5_mp-0.1.tex
+++ b/control/plots/compare_control_vel_l-0.5_mp-0.1.tex
@@ -49,6 +49,6 @@
         \end{axis}
     \end{tikzpicture}
     \caption{Velocity step response comparison of different controllers
-    ($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.1}{\kilo\gram})}
+    ($l =$~\SI{0.5}{\meter}, $m_p =$~\SI{0.1}{\kilo\gram}).}
     \label{fig:compare_control_vel_l05}
 \end{figure}
