--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -578,9 +578,9 @@ Finally, practical flight data will be used to verify the simulated mathematical
         % where describes the component of the acceleration of the multirotor as a function of the motion
         The reaction force applied to the multirotor due to the payload can now be determined in the inertial frame as,
         \begin{equation}
-            \bm{F}_{\mathcal{I}}^P = m_Q \ddot{\bm{r}}_Q ,
+            \bm{F}_{\mathcal{I}}^P = m_Q \ddot{\bm{r}}^P_Q ,
         \end{equation}
-        from Newton's second law, where $\ddot{\bm{r}}_Q$ represents the component of the multirotor acceleration caused by the suspended payload.
+        from Newton's second law, where $\ddot{\bm{r}}^P_Q$ represents the component of the multirotor acceleration caused by the suspended payload.
         This force can be represented in the body frame as,
         \begin{equation}
             \bm{F}_{\mathcal{B}}^P = \bm{R}_V \bm{F}_{\mathcal{I}}^P .
@@ -626,16 +626,16 @@ Finally, practical flight data will be used to verify the simulated mathematical
 \FloatBarrier\section{Model verification} \label{sec:model_verification}
 
     \paragraph
-    To verify whether the non-linear simulation model derived in previous sections is an accurate representation of the real-world dynamics, the simulation data is verified against practical data.
-    Firstly, a North velocity step response was performed in a practical flight with a multirotor to verify the multirotor model without a payload.
-    The practical multirotor is described in Chapter~\ref{chap:exp_design}.
+    To verify whether the non-linear simulation model derived in this chapter is an accurate representation of the real-world dynamics, the simulation data is verified against practical data.
+    A North velocity step response was performed in a practical flight with a multirotor to verify the multirotor model without a payload.
+    This multirotor will be described in Chapter~\ref{chap:exp_design}.
     % For simplicity in comparison, the body $\bar{\bm{x}}_{\mathcal{B}}$ axis was aligned with the inertial North axis for this flight.
     
     \paragraph
     This flight was performed on a day with almost no wind to minimise the effect of wind disturbances in the comparison.
     Starting from the same initial condition, a velocity step setpoint was commanded in a simulation and the resulting simulation data was compared to the practical flight data.
-    This Simulink\texttrademark~simulation environment is discussed in Chapter~\ref{chap:control} and includes the dynamics of the default multirotor controllers.
     The results compare the combined multirotor and controller simulation model to the practical flight data.
+    The Simulink\texttrademark~simulation environment used here includes the dynamics of the default multirotor controllers and will be further discussed in Chapter~\ref{chap:control}.
 
     \input{modelling/plots/prac_vs_sim_vel_step_no_payload.tex}
 
