--- a/results/plots/cable_length_vs_train_time_wind.tex
+++ b/results/plots/cable_length_vs_train_time_wind.tex
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{Cable length estimation error as a function of length of training data with wind disturbances
-        ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter})}
+        ($m_p =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{1}{\meter}).}
     \label{fig:cable_length_vs_train_time_wind}
 \end{figure}
