--- a/results/plots/prac_pediction_double_pend_vel_black.tex
+++ b/results/plots/prac_pediction_double_pend_vel_black.tex
@@ -44,6 +44,6 @@
     \end{tikzpicture} 
     
     \caption{Practical flight data and model predictions with an elongated payload for a North velocity step input
-        ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter})}
+        ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{0.5}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.6}{\meter}).}
     \label{fig:prac_pediction_double_pend_vel_black}
 \end{figure}
