--- a/results/plots/prediction_single_pend_white_prac_bad.tex
+++ b/results/plots/prediction_single_pend_white_prac_bad.tex
@@ -39,6 +39,6 @@
     \end{tikzpicture} 
     
     \caption{White-box model prediction for a North velocity step input
-    ($l =$~\SI{0.5}{\metre}, $m_p =$~\SI{0.2}{\kilo\gram}.)}
+    ($l =$~\SI{0.5}{\metre}, $m_p =$~\SI{0.2}{\kilo\gram}.).}
     \label{fig:prediction_single_pend_white_prac_bad}
 \end{figure}
