--- a/system_id/plots/FFT_double_pend.tex
+++ b/system_id/plots/FFT_double_pend.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Double pendulum}
+    \caption{Double pendulum.}
     \label{fig:FFT_double_pend}
 \end{subfigure}
