--- a/system_id/plots/FFT_vel_step.tex
+++ b/system_id/plots/FFT_vel_step.tex
@@ -32,6 +32,6 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{The single-sided amplitude spectrum of the FFT}
+    \caption{The single-sided amplitude spectrum of the FFT.}
     \label{fig:FFT_vel_step}
 \end{subfigure}
