--- a/system_id/plots/prediction_single_pend_white.tex
+++ b/system_id/plots/prediction_single_pend_white.tex
@@ -49,6 +49,6 @@
     \end{tikzpicture} 
     
     \caption{White-box model predictions of a single pendulum for a North velocity step input
-    ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.)}
+    ($l =$~\SI{1}{\metre}, $m_p =$~\SI{0.3}{\kilo\gram}.).}
     \label{fig:prediction_single_pend_white}
 \end{figure}
