Editted bib file manually

--- a/control/mpc.tex
+++ b/control/mpc.tex
@@ -38,7 +38,7 @@
         \begin{figure}[ht]
             \centering
             \includegraphics[width=0.818\linewidth]{control/fig/receding_horizon}
-            \caption{Illustration of the receding horizon of an \gls{MPC} (adapted from \cite{horizon_diagram2021})}
+            \caption{Illustration of the receding horizon of an \gls{MPC} \cite{horizon_diagram2021}}
             \label{fig:receding_horizon}
         \end{figure}
         
