--- a/stellenbosch_ee_report.tex
+++ b/stellenbosch_ee_report.tex
@@ -135,6 +135,7 @@
 % \bibliographystyle{IEEEtran}
 \usepackage[numbers,sort]{natbib}  % automatically reorder inline citations
 \bibliographystyle{IEEEtranN}
+% \usepackage[style=ieee,dashed=false]{biblatex} Figure out way to make dashed line of repeated authors go away
 
 % \usepackage[hyphens]{url}
 
@@ -221,7 +222,7 @@
 \input{conclusion/conclusion.tex}
 
 % Bibliography
-\bibliography{bibtex/Thesis.bib}
+\bibliography{bibtex/manual.bib}
 
 % End matter
 \appendix
