Removed dash for repeated authors in bibliography

--- a/bibtex/manual.bib
+++ b/bibtex/manual.bib
@@ -1,5 +1,10 @@
 Manually modified, from auto generated file from mendeley (29 Oct 2021, 18:18)
 
+Remove dash for repeated author:
+@IEEEtranBSTCTL{IEEEexample:BSTcontrol,
+  CTLdash_repeated_names = "no"
+}
+
 @article{Us2019,
 author = {Us, Kamil Yekta and Cevher, A. and Sever, M. and Kırlı, A.},
 doi = {10.1016/j.procs.2019.09.061},
