Fixed havok citation and stange character encoding

--- a/bibtex/manual.bib
+++ b/bibtex/manual.bib
@@ -6,7 +6,7 @@ Remove dash for repeated author:
 }
 
 @article{Us2019,
-author = {Us, Kamil Yekta and Cevher, A. and Sever, M. and Kırlı, A.},
+author = {Us, Kamil Yekta and Cevher, A. and Sever, M. and Kirli, A.},
 doi = {10.1016/j.procs.2019.09.061},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Us et al. - - On the Effect of Slung Load on Quadrotor Performance(3).pdf:pdf},
 issn = {18770509},
@@ -119,7 +119,8 @@ year = {2018}
 @incollection{Brunton2019d,
 abstract = {Many systems of interest are exceedingly high dimensional, making them difficult to characterize. High dimensionality also limits controller robustness due to significant computational time delays. For example, for the governing equations of fluid dynamics, the resulting discretized equations may have millions or billions of degrees of freedom, making them expensive to simulate. Thus, significant effort has gone into obtaining reduced-order models that capture the most relevant mechanisms and are suitable for feedback control. Unlike reduced-order models based on proper orthogonal decomposition (see Chapters 11 and 12), which order modes based on energy content in the data, here we will discuss a class of balanced reduced-order models that employ a different inner product to order modes based on input-output energy. Thus, only modes that are both highly controllable and highly observable are selected, making balanced models ideal for control applications. In this chapter we also describe related procedures for model reduction and system identification , depending on whether or not the user starts with a high-fidelity model or simply has access to measurement data. 9.1 Model Reduction and System Identification In many nonlinear systems, it is still possible to use linear control techniques. For example, in fluid dynamics there are numerous success stories of linear model-based flow control [27, 180, 94], for example to delay transition from laminar to turbulent flow in a spatially developing boundary layer, to reduce skin-friction drag in wall turbulence, and to stabilize the flow past an open cavity. However, many linear control approaches do not scale well to large state spaces, and they may be prohibitively expensive to enact for real-time control on short timescales. Thus, it is often necessary to develop low-dimensional approximations of the system for use in real-time feedback control. There are two broad approaches to obtain reduced-order models (ROMs): First, it is possible to start with a high-dimensional system, such as the discretized Navier-Stokes equations, and project the dynamics onto a low-dimensional subspace identified, for example , using proper orthogonal decomposition (POD; Chapter 11) [57, 251] and Galerkin projection [441, 53]. There are numerous variations to this procedure, including the discrete empirical interpolation methods (DEIM; Section 12.5) [127, 419], gappy POD (Sec-tion 12.1) [179], balanced proper orthogonal decomposition (BPOD; Section 9.2) [554, 458], and many more. The second approach is to collect data from a simulation or an experiment and identify a low-rank model using data-driven techniques. This approach is typically called system identification, and is often preferred for control design because of the relative ease of implementation. Examples include the dynamic mode decomposition 321},
 author = {Brunton, Steven L. and Kutz, J. Nathan},
-booktitle = {Data-Driven Science and Engineering},
+booktitle = {Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control},
+publisher = {Cambridge University Press},
 doi = {10.1017/9781108380690.010},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brunton, Kutz - - Balanced Models for Control(2).pdf:pdf},
 pages = {321--344},
@@ -277,7 +278,7 @@ year = {2015}
 @inproceedings{Lee2015,
 abstract = {This paper is focused on the formation planning and control of an arbitrary number of quadrotors transporting a cable-suspended payload. A payload that is modeled as a point mass is connected to quadrotors via rigid links, and a desired trajectory of the payload is prescribed. Assuming that the location and shape of obstacles are available, the desired formation of quadrotors relative to the payload is constructed to avoid collision with the obstacles, via the centroidal Voronoi tessellation. Then, these are integrated with a geometric tracking control system. A numerical example illustrates that quadrotors transports a payload along a desired trajectory, while flying through a narrow gap between obstacles to avoid a collision.},
 author = {Lee, Taeyoung},
-booktitle = {Proceedings of the American Control Conference},
+booktitle = {American Control Conference (ACC)},
 doi = {10.1109/ACC.2015.7171001},
 pages = {1842--1848},
 publisher = {IEEE},
@@ -287,7 +288,7 @@ year = {2015}
 @inproceedings{Goodarzi2015,
 abstract = {This paper is focused on the dynamics and control of arbitrary number of quadrotor UAVs transporting a rigid body payload. The rigid body payload is connected to quadrotors via flexible cables where each flexible cable is modeled as a system of serially-connected links. It is shown that a coordinate-free form of equations of motion can be derived for arbitrary numbers of quadrotors and links according to Lagrangian mechanics on a manifold. A geometric nonlinear controller is presented to transport the rigid body to a fixed desired position while aligning all of the links along the vertical direction. Numerical results are provided to illustrate the desirable features of the proposed control system.},
 author = {Goodarzi, Farhad A. and Lee, Taeyoung},
-booktitle = {Proceedings of the American Control Conference},
+booktitle = {American Control Conference (ACC)},
 doi = {10.1109/ACC.2015.7172066},
 pages = {4677--4682},
 publisher = {IEEE},
@@ -358,7 +359,7 @@ year = {2020}
 @inproceedings{Kotaru2017,
 abstract = {We study the problem of a quadrotor transporting a payload suspended through a cable. While prior work has modeled the cable as a massless rigid link, in this paper, we consider the cable to be elastic with both spring stiffness and damping. We derive a coordinate-free dynamical model of the system. We use singular-perturbations to show that a geometric controller developed for the case of an inelastic cable still works for the case of an elastic cable to achieve almost global exponential tracking of a desired load position to within a certain bound. We provide numerical results to validate the proposed controller for various spring and damping coefficients for the cable.},
 author = {Kotaru, Prasanth and Wu, Guofan and Sreenath, Koushil},
-booktitle = {Proceedings of the American Control Conference},
+booktitle = {American Control Conference (ACC)},
 doi = {10.23919/ACC.2017.7963553},
 pages = {3906--3913},
 publisher = {IEEE},
@@ -401,7 +402,7 @@ year = {2018}
 @inproceedings{Goodarzi2014,
 abstract = {This paper deals with dynamics and control of a quadrotor UAV with a payload that is connected via a flexible cable, which is modeled as a system of serially-connected links. It is shown that a coordinate-free form of equations of motion can be derived for an arbitrary number of links according to Lagrangian mechanics on a manifold. A geometric nonlinear control system is also presented to asymptotically stabilize the position of the quadrotor while aligning the links to the vertical direction. These results will be particularly useful for aggressive load transportation that involves deformation of the cable. The desirable properties are illustrated by a numerical example and a preliminary experimental result. {\textcopyright} American Automatic Control Council.},
 author = {Goodarzi, Farhad A. and Lee, Daewon and Lee, Taeyoung},
-booktitle = {Proceedings of the American Control Conference},
+booktitle = {American Control Conference (ACC)},
 doi = {10.1109/ACC.2014.6859419},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Goodarzi, Lee, Lee - - Geometric stabilization of a quadrotor UAV with a payload connected by flexible cable.pdf:pdf},
 keywords = {Aerospace,Algebraic/geometric methods,Autonomous systems},
@@ -423,15 +424,6 @@ pmid = {28209426},
 publisher = {ISA - Instrumentation, Systems, and Automation Society},
 title = {{Swing-attenuation for a quadrotor transporting a cable-suspended payload}},
 volume = {68},
-year = {2017}
-}
-@book{Brunton2017,
-abstract = {This book is about the growing intersection of data-driven methods, applied optimization, and the classical ﬁelds of engineering mathematics and mathematical physics. We have been developing this material over a number of years, primarily to educate our advanced undergrad and beginning graduate students from engineering and physical science departments. Typically, such students have backgrounds in linear algebra, differential equations, and scientiﬁc computing, with engineers often having some exposure to control theory and/or partial differential equations},
-author = {Brunton, S. L. and Kutz, J. N.},
-file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brunton, Kutz - - Data Driven Science \& Engineering - Machine Learning, Dynamical Systems, and Control(2).pdf:pdf},
-isbn = {9781108422093},
-pages = {140 -- 143},
-title = {{Data Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control}},
 year = {2017}
 }
 @inproceedings{Erasmus2020article,
@@ -584,8 +576,8 @@ title = {{PX4: A node-based multithreaded open source robotics framework for dee
 year = {2015}
 }
 @article{Lucia2017,
-abstract = {•A tool for rapid and modular development of sustainable NMPC solutions is presented.•It is based on four basic modules: model, optimizer, observer and simulator.•Templates for the easy and rapid implementation are provided.•An implementation of multi-stage NMPC to deal with uncertainties is included.•The framework is experimentally validated for an uncertain nonlinear CSTR example.},
-author = {Lucia, Sergio and Tătulea-Codrean, Alexandru and Schoppmeyer, Christian and Engell, Sebastian},
+abstract = {A tool for rapid and modular development of sustainable NMPC solutions is presented.•It is based on four basic modules: model, optimizer, observer and simulator.•Templates for the easy and rapid implementation are provided.•An implementation of multi-stage NMPC to deal with uncertainties is included.•The framework is experimentally validated for an uncertain nonlinear CSTR example.},
+author = {Lucia, Sergio and T\u{a}tulea-Codrean, Alexandru and Schoppmeyer, Christian and Engell, Sebastian},
 doi = {10.1016/j.conengprac.2016.12.009},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Lucia et al. - - Rapid development of modular and sustainable nonlinear model predictive control solutions.pdf:pdf},
 issn = {09670661},
@@ -896,13 +888,8 @@ volume = {6},
 year = {2021}
 }
 @techreport{Brescianini2013,
-abstract = {This report addresses the issue of nonlinear attitude control for quadrocopters. A globally stable attitude controller based on unit quaternions is proposed and its stability and robustness is proven. In addition, a method to prioritize the control of the crucial pitch and roll angles over yaw is introduced. Finally, experiments with the proposed nonlinear controller are conducted which demonstrate its performance.},
 author = {Brescianini, Dario and Hehn, Markus and D'Andrea, Raffaello},
-doi = {10.3929/ETHZ-A-009970340},
-file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brescianini, Hehn, D'Andrea - - Nonlinear Quadrocopter Attitude Control.pdf:pdf},
-keywords = {AUTOPILOT (AERONAUTICAL ENGINEERING),FLUGLAGESTEUERUNGSANLAGEN (LUFTFAHRTTECHNIK),HELICOPTERS,HUBSCHRAUBER,MULTIKOPTER (LUFTFAHRTTECHNIK),MULTIROTORS (AERONAUTICAL ENGINEERING),NICHTLINEARE REGELSYSTEME (AUTOMATISCHE REGELUNG),NONLINEAR CONTROL SYSTEMS (AUTOMATIC CONTROL),QUADROKOPTER,QUADROTORS,UNBEMANNTE FLUGZEUGE (LUFTFAHRTTECHNIK),UNMANNED AIR VEHICLES (AERONAUTICAL ENGINEERING)},
-publisher = {Eidgen{\"{o}}ssische Technische Hochschule Z{\"{u}}rich, Departement Maschinenbau und Verfahrenstechnik},
-series = {ETH Zurich Research Collection},
+institution = {Eidgen{\"{o}}ssische Technische Hochschule Z{\"{u}}rich, Departement Maschinenbau und Verfahrenstechnik},
 title = {{Nonlinear Quadrocopter Attitude Control}},
 year = {2013}
 }
@@ -947,7 +934,8 @@ year = {2018}
 @incollection{Brunton2019e,
 abstract = {partially motivated by Aaron Ames' curiosity based on a critical insight by Jessy Grizzle and with the help of Wenlong Ma on experimental validation!},
 author = {Brunton, Steven L. and Kutz, J. Nathan},
-booktitle = {Data-Driven Science and Engineering},
+booktitle = {Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control},
+publisher = {Cambridge University Press},
 doi = {10.1017/9781108380690.011},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brunton, Kutz - - Data-Driven Control(2).pdf:pdf},
 pages = {345--372},
@@ -1013,7 +1001,8 @@ year = {2020}
 @incollection{Brunton2019b,
 abstract = {All of machine learning revolves around optimization. This includes regression and model selection frameworks that aim to provide parsimonious and interpretable models for data [266]. Curve fitting is the most basic of regression techniques, with polynomial and exponential fitting resulting in solutions that come from solving the linear system Ax = b. (4.1) When the model is not prescribed, then optimization methods are used to select the best model. This changes the underlying mathematics for function fitting to either an overdeter-mined or underdetermined optimization problem for linear systems given by: argmin x},
 author = {Brunton, Steven L. and Kutz, J. Nathan},
-booktitle = {Data-Driven Science and Engineering},
+booktitle = {Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control},
+publisher = {Cambridge University Press},
 doi = {10.1017/9781108380690.005},
 file = {:home/murray/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Brunton, Kutz - - Regression and Model Selection(2).pdf:pdf},
 pages = {117--153},
