--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -670,8 +670,8 @@ Finally, practical flight data will be used to verify the simulated mathematical
 \section{Summary}
 
     \paragraph
-    This chapter showed a detailed derivation of a mathematical model representing the Honeybee multirotor with a suspended payload.
-    A comparison of the simulation model and practical flight data showed that the model provides a good representation of the actual multirotor-payload system.
-    The mathematical model derived in this chapter can therefore be used for further simulations in subsequent chapters.
+    This chapter showed the derivation of a mathematical model representing the Honeybee multirotor with a suspended payload.
+    A comparison of the simulation model and practical data showed that the model provides a good representation of the actual multirotor-payload system.
+    This mathematical model will therefore be used for simulations in subsequent chapters.
 
 }
